tests/Parser.txt
x = y
----------
List x = y...
  Rule x = y
    Id x
    Id y
  Empty
==========
-- One-liner with comment
x = y
----------
List x = y...
  Rule x = y
    Id x
    Id y
  Empty
==========
-- Choice
x = y / z
----------
List x = y / z...
  Rule x = y / z
    Id x
    Or y / z
      Id y
      Id z
  Empty
==========
-- Bracket
x = (y / z)
----------
List x = (y / z)...
  Rule x = (y / z)
    Id x
    Or y / z
      Id y
      Id z
  Empty
==========
----------
Error in tests/Parser.txt, line 40: expecting id, newline
----------
^
==========
-- Expecting =
x
----------
Error in tests/Parser.txt, line 46: expecting equals
x
 ^
==========
-- Normal \n line endings
x = x
y = y
----------
List x = x...
  Rule x = x
    Id x
    Id x
  Rule y = y
    Id y
    Id y
  Empty
==========
-- Lines containing only spaces are comments


x = x
----------
List x = x...
  Rule x = x
    Id x
    Id x
  Empty
==========
-- Trailing blank line
x = x
y = y

----------
List x = x...
  Rule x = x
    Id x
    Id x
  Rule y = y
    Id y
    Id y
  Empty
==========
-- Trailing blank lines
x = x
y = y


----------
List x = x...
  Rule x = x
    Id x
    Id x
  Rule y = y
    Id y
    Id y
  Empty
==========
-- Varied comments and empty lines
-- initial comment

x = y

-- middle comment
y = z

-- end comment
----------
List x = y...
  Rule x = y
    Id x
    Id y
  Rule y = z
    Id y
    Id z
  Empty
==========
-- Scanner error
x = |y|
----------
Error in tests/Parser.txt, line 125: expecting atom, newline
x = |y|
    ^
==========
-- Incomplete string
x = "abc
----------
Error in tests/Parser.txt, line 132: expecting quote
x = "abc
        ^
==========
-- Incomplete set
x = 'abc
----------
Error in tests/Parser.txt, line 139: expecting quote
x = 'abc
        ^
==========
-- One rule
x = "a"
----------
List x = "a"...
  Rule x = "a"
    Id x
    Text "a"
  Empty
==========
-- Two rules
x = "a"
y = "b"
----------
List x = "a"...
  Rule x = "a"
    Id x
    Text "a"
  Rule y = "b"
    Id y
    Text "b"
  Empty
==========
-- Expecting equals
x
----------
Error in tests/Parser.txt, line 168: expecting equals
x
 ^
==========
-- Expecting atom
x = /
----------
Error in tests/Parser.txt, line 175: expecting atom, newline
x = /
    ^
==========
-- Missing close bracket
x = (y
y = z
----------
Error in tests/Parser.txt, line 182: expecting atom, bracket, operator
x = (y
      ^
==========
-- Dot in the wrong place
x = .
----------
Error in tests/Parser.txt, line 190: expecting atom, newline
x = .
    ^
==========
-- Dot outside of range.
x = 0.
----------
Error in tests/Parser.txt, line 197: expecting atom, newline
x = 0.
    ^
==========
-- Drop action
x = @3
----------
List x = @3...
  Rule x = @3
    Id x
    Act @3
  Empty
==========
-- Tag
x = %x
----------
List x = %x...
  Rule x = %x
    Id x
    Tag %x
  Empty
==========
-- Bad marker
x = 'x' #3
----------
Error in tests/Parser.txt, line 222: expecting name
x = 'x' #3
         ^
==========
-- Continuation lines
x =
y /
z
x =
(
a) [
c]
x
= y
/ z
x
= y (a
) [c
]
----------
List x =...
  Rule x =...
    Id x
    Or y /...
      Id y
      Id z
  Rule x =...
    Id x
    And (...
      Id a
      See [...
        Id c
  Rule x...
    Id x
    Or y...
      Id y
      Id z
  Rule x...
    Id x
    And y (a...
      Id y
      Id a
      See [c...
        Id c
  Empty
==========
-- Brackets
exp = (exp) end
exp = [exp] end
----------
List exp = (exp) end...
  Rule exp = (exp) end
    Id exp
    And (exp) end
      Id exp
      Id end
  Rule exp = [exp] end
    Id exp
    And [exp] end
      See [exp]
        Id exp
      Id end
  Empty
==========
-- The + * ? postfix operators
exp = exp* exp+ exp? end
----------
List exp = exp* exp+ exp? end...
  Rule exp = exp* exp+ exp? end
    Id exp
    And exp* exp+ exp? end
      Any exp*
        Id exp
      Some exp+
        Id exp
      Opt exp?
        Id exp
      Id end
  Empty
==========
-- Ranges
r1 = '\0..\127'
r2 = 'a..z'
----------
List r1 = '\0..\127'...
  Rule r1 = '\0..\127'
    Id r1
    Range '\0..\127'
  Rule r2 = 'a..z'
    Id r2
    Range 'a..z'
  Empty
==========
-- Illegal spaces in code range (allowed until Binder)
r = '\0 .. \127'
----------
List r = '\0 .. \127'...
  Rule r = '\0 .. \127'
    Id r
    Set '\0 .. \127'
  Empty
==========
-- Literal id
`x` = %x
----------
List `x` = %x...
  Rule `x` = %x
    Id `x`
    Tag %x
  Empty
==========
-- Complete scan-parser grammar for sums
exp = term ("+" term @2add / "-" term @2sub)* <>
term = factor ("*" factor @2mul / "/" factor @2div)*
factor = primary ("^" factor @2pow)?
primary = number / "(" exp ")"
number = digit+ @number
digit = '0123456789'
----------
List exp = term ("+" term @2add / "-" term @2sub)* <>...
  Rule exp = term ("+" term @2add / "-" term @2sub)* <>
    Id exp
    And term ("+" term @2add / "-" term @2sub)* <>
      Id term
      Any ("+" term @2add / "-" term @2sub)*
        Or "+" term @2add / "-" term @2sub
          And "+" term @2add
            Text "+"
            Id term
            Act @2add
          And "-" term @2sub
            Text "-"
            Id term
            Act @2sub
      Split <>
  Rule term = factor ("*" factor @2mul / "/" factor @2div)*
    Id term
    And factor ("*" factor @2mul / "/" factor @2div)*
      Id factor
      Any ("*" factor @2mul / "/" factor @2div)*
        Or "*" factor @2mul / "/" factor @2div
          And "*" factor @2mul
            Text "*"
            Id factor
            Act @2mul
          And "/" factor @2div
            Text "/"
            Id factor
            Act @2div
  Rule factor = primary ("^" factor @2pow)?
    Id factor
    And primary ("^" factor @2pow)?
      Id primary
      Opt ("^" factor @2pow)?
        And "^" factor @2pow
          Text "^"
          Id factor
          Act @2pow
  Rule primary = number / "(" exp ")"
    Id primary
    Or number / "(" exp ")"
      Id number
      And "(" exp ")"
        Text "("
        Id exp
        Text ")"
  Rule number = digit+ @number
    Id number
    And digit+ @number
      Some digit+
        Id digit
      Act @number
  Rule digit = '0123456789'
    Id digit
    Set '0123456789'
  Empty
==========
-- Error markers
assignment = left #equals "=" right
----------
List assignment = left #equals "=" right...
  Rule assignment = left #equals "=" right
    Id assignment
    And left #equals "=" right
      Id left
      Mark #equals
      Text "="
      Id right
  Empty
==========
-- Error on line 3
x = y /
z / /
----------
Error in tests/Parser.txt, line 416: expecting atom, newline
z / /
    ^
==========
-- Unicode letters and digits and numbers
x = abcπ٤
z = '\1114111' / '\0ffff'
----------
List x = abcπ٤...
  Rule x = abcπ٤
    Id x
    Id abcπ٤
  Rule z = '\1114111' / '\0ffff'
    Id z
    Or '\1114111' / '\0ffff'
      Set '\1114111'
      Set '\0ffff'
  Empty
==========
-- Strings, character sets, Unicode
x = "abc" " !#$%^&*()_-=+[]`{};:'@#~"
y = 'abc' ' !#$%^&*()_-=+[]`{};:"@#~'
pi = "\960"
----------
List x = "abc" " !#$%^&*()_-=+[]`{};:'@#~"...
  Rule x = "abc" " !#$%^&*()_-=+[]`{};:'@#~"
    Id x
    And "abc" " !#$%^&*()_-=+[]`{};:'@#~"
      Text "abc"
      Text " !#$%^&*()_-=+[]`{};:'@#~"
  Rule y = 'abc' ' !#$%^&*()_-=+[]`{};:"@#~'
    Id y
    And 'abc' ' !#$%^&*()_-=+[]`{};:"@#~'
      Set 'abc'
      Set ' !#$%^&*()_-=+[]`{};:"@#~'
  Rule pi = "\960"
    Id pi
    Text "\960"
  Empty
==========
-- Actions, tests, numbers and errors
x = %x @0x @1x @ @x
y = '\0' '\1' '\2' '\10' '\12' '\123'
z = '\0ffff' '\01ABCDEF23' '\0FG'
u = #err ''
----------
List x = %x @0x @1x @ @x...
  Rule x = %x @0x @1x @ @x
    Id x
    And %x @0x @1x @ @x
      Tag %x
      Act @0x
      Act @1x
      Act @
      Act @x
  Rule y = '\0' '\1' '\2' '\10' '\12' '\123'
    Id y
    And '\0' '\1' '\2' '\10' '\12' '\123'
      Set '\0'
      Set '\1'
      Set '\2'
      Set '\10'
      Set '\12'
      Set '\123'
  Rule z = '\0ffff' '\01ABCDEF23' '\0FG'
    Id z
    And '\0ffff' '\01ABCDEF23' '\0FG'
      Set '\0ffff'
      Set '\01ABCDEF23'
      Set '\0FG'
  Rule u = #err ''
    Id u
    And #err ''
      Mark #err
      Set ''
  Empty
==========
-- Brackets and operators
x = (y / z) / y?
x = (y/z)+ / y*
x = y z w ! / y
x = [y z] / w
----------
List x = (y / z) / y?...
  Rule x = (y / z) / y?
    Id x
    Or (y / z) / y?
      Or y / z
        Id y
        Id z
      Opt y?
        Id y
  Rule x = (y/z)+ / y*
    Id x
    Or (y/z)+ / y*
      Some (y/z)+
        Or y/z
          Id y
          Id z
      Any y*
        Id y
  Rule x = y z w ! / y
    Id x
    Or y z w ! / y
      And y z w !
        Id y
        Id z
        Not w !
          Id w
      Id y
  Rule x = [y z] / w
    Id x
    Or [y z] / w
      See [y z]
        And y z
          Id y
          Id z
      Id w
  Empty
==========
-- Comment before continuation
x =
 -- comment
 y
----------
Error in tests/Parser.txt, line 540: expecting atom
 -- comment
 ^
==========
-- String with supplementary unicode character 195101 (=2fa1d, last letter)
range = "\195101" / '\195101'
----------
List range = "\195101" / '\195101'...
  Rule range = "\195101" / '\195101'
    Id range
    Or "\195101" / '\195101'
      Text "\195101"
      Set '\195101'
  Empty
==========
-- Angle brackets now used for dividers
keyword = <df> keyword1 / keyword2
keyword1 = "break" / "case" / "catch" / "continue" / "default"
keyword2 = "do" / "else" / "for" / "if" / "switch" / "while"
----------
List keyword = <df> keyword1 / keyword2...
  Rule keyword = <df> keyword1 / keyword2
    Id keyword
    Or <df> keyword1 / keyword2
      And <df> keyword1
        Split <df>
        Id keyword1
      Id keyword2
  Rule keyword1 = "break" / "case" / "catch" / "continue" / "default"
    Id keyword1
    Or "break" / "case" / "catch" / "continue" / "default"
      Text "break"
      Text "case"
      Text "catch"
      Text "continue"
      Text "default"
  Rule keyword2 = "do" / "else" / "for" / "if" / "switch" / "while"
    Id keyword2
    Or "do" / "else" / "for" / "if" / "switch" / "while"
      Text "do"
      Text "else"
      Text "for"
      Text "if"
      Text "switch"
      Text "while"
  Empty
==========
-- End-of-file
end = #end <>
----------
List end = #end <>...
  Rule end = #end <>
    Id end
    And #end <>
      Mark #end
      Split <>
  Empty
==========
-- Expecting end-of-file
x = y
?
----------
Error in tests/Parser.txt, line 603: expecting end of text, id, newline
?
^
==========
-- Splitters
x = <abc> y / z
----------
List x = <abc> y / z...
  Rule x = <abc> y / z
    Id x
    Or <abc> y / z
      And <abc> y
        Split <abc>
        Id y
      Id z
  Empty
==========
-- Incomplete splitter
x = <abc
----------
Error in tests/Parser.txt, line 623: expecting greater than sign
x = <abc
        ^
==========
-- Underscore
a_b = xy_
----------
List a_b = xy_...
  Rule a_b = xy_
    Id a_b
    Id xy_
  Empty
==========
-- Hyphen
a-b = xy-
----------
List a-b = xy-...
  Rule a-b = xy-
    Id a-b
    Id xy-
  Empty
==========
-- Backslash in quotes
bs = '\92'
----------
List bs = '\92'...
  Rule bs = '\92'
    Id bs
    Set '\92'
  Empty
==========
-- Empty tag name
x = y %
----------
Error in tests/Parser.txt, line 657: expecting name
x = y %
       ^
==========
-- Inclusion
a = 'a'
{Parser2.txt}
d = 'd'
----------
List a = 'a'...
  Rule a = 'a'
    Id a
    Set 'a'
  Rule b = 'b'
    Id b
    Set 'b'
  Rule c = 'c'
    Id c
    Set 'c'
  Rule d = 'd'
    Id d
    Set 'd'
  Empty
